--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   text-align: center;
 }
-.tou img {
+.tou {
   box-shadow: inset 0 0 10px #000;
   padding: 5px;
   border-radius: 50%;
@@ -15,10 +15,17 @@ body {
   -moz-transition: all ease 1s;
   -o-transition: all ease 1s;
 }
-.tou img:hover {
+.tou:hover {
   transform: rotate(360deg);
   -webkit-transform: rotate(360deg);
   -moz-transform: rotate(360deg);
   -o-transform: rotate(360deg);
   -ms-transform: rotate(360deg);
+}
+.kuang {
+  margin: 100px 80px 50px;
+  padding: 15px;
+  background-color: #66ccff88;
+  border-radius: 30px;
+  box-shadow: 0px 0px 50px 20px #66ccffaf;
 }
